--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>mavenTest Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <finalName>mavenTest</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <!-- 项目属性 -->
   <properties>
@@ -290,18 +304,5 @@
     </dependency>
     <!-- 解析excel 结束 -->
   </dependencies>
-  <build>
-    <finalName>FirstProject</finalName>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  
 </project>
